--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@apollo/react-hooks": "^4.0.0",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropdown-select": "^4.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
