--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.9",
     "@apollo/react-hooks": "^4.0.0",
+    "@tanstack/react-table": "^8.11.8",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "multiselect-react-dropdown": "^2.0.25",
